# ParallelReduce

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/: execution.hpp  reduce.hpp  thread_pool.hpp
include/core/: parallel_reduce.hpp  sequential_reduce.hpp  threshold.hpp
include/debug/: verify.hpp
include/detail/: cacheline.hpp  partition.hpp  unroll.hpp
scripts/: gen_input.py
src/: bench.cpp  main.cpp
tests/: CMakeLists.txt
tests/e2e/: gen_large_e2e.py
tests/unit/: parallel_reduce_tests.cpp  partition_tests.cpp  sequential_reduce_tests.cpp  thread_pool_tests.cpp  threshold_tests.cpp
